fix: hide overflow on long titled list items

--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -13,6 +13,8 @@
 
 .text {
   margin: 0 0.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
